[project]
name = "python-node-editor"
version = "0.1.0"
description = "Dynamic Function API - FastAPI application that automatically creates REST endpoints from Python functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "fastapi[standard]>=0.116.0",
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]



[project.scripts]
pne-run-backend = "app.cli:main"
pne-run-analyze = "app.cli:analyze"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.0",
]
