[project]
name = "python-node-editor"
version = "0.1.0"
description = "Dynamic Function API - FastAPI application that automatically creates REST endpoints from Python functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "fastapi[standard]>=0.121.0",
    "httpx>=0.28.1",
    "pillow>=12.0.0",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "shortuuid>=1.0.13",
    "uvicorn[standard]>=0.35.0",
]



[project.scripts]
pne-backend = "app.cli:backend_only"
pne = "app.cli:main"
pne-analyze = "app.cli:analyze"
pne-build-frontend = "app.cli:build_frontend"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
data = ["frontend/prebuilt"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]
